left branch all files are added

--- a/five.html
+++ b/five.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>second branches</h1>
-    <p>vfvgbvgbhbnhnh</p>
+    <h1>five</h1>
 </body>
 </html>
